# agent-demo-hr

./: .env.example  .gitignore  CODEOWNERS  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/: __init__.py  fact_employee.csv  fact_employee.parquet  generate_hr.py  hr_access.csv  hr_access.parquet  reset.py  schema.md  seed_local.py
demo/: __init__.py  __main__.py  app.py  data_agent.py  index.html  router.py
docs/: _config.yml  architecture.md  demo-script.md  identity-flow.md  index.md  plan.md  preview-limitations.md  production-mapping.md  run-the-demo.md  runbook.md  threat-model.md  use-case.md
e2e/: README.md
infra/: README.md
orchestrator/: instructions.md  user_context.py
orchestrator/eval/: golden.jsonl  prompts.jsonl  run_eval.py
roster_mcp/: __init__.py  auth_obo.py  config.py  db.py  export.py  queries.sql  registry.py  server.py
roster_mcp/tests/: conftest.py  test_demo.py  test_export.py  test_filters.py  test_org.py  test_rls.py  test_seed.py
roster_mcp/tools/: __init__.py  count.py  export_roster.py  list.py  org.py  schema.py
teams/: personas.md  sso_app.md
