[project]
name = "agent-demo-hr"
version = "0.1.0"
description = "Local scaffold for a Fabric-first HR chatbot demo (synthetic Contoso data, two-path agent pattern)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
data = ["faker>=25", "numpy>=1.26", "pandas>=2.2"]
dev = ["ruff>=0.6", "pytest>=8"]

[project.scripts]
hr-demo = "demo.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["data", "demo", "roster_mcp", "roster_mcp.tools", "orchestrator", "orchestrator.eval"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# ponytail: default rules + a few obvious ones; not gold-plating the linter config
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["roster_mcp/tests"]
